<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/text_main"
        android:textAlignment="center"
        android:textColor="#033051"
        android:textSize="60sp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/welcome_log"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#001021"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/insert_mail"
        android:inputType="textEmailAddress"
        android:textColorHint="#001021"
        android:textStyle="italic"

        />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#001021"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/insert_pass"
        android:inputType="textPassword"
        android:textColorHint="#001021"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="#fad612"
            android:fontFamily="@font/comfortaa"
            android:text="@string/login_button"
            android:textColor="#001021"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/comfortaa"
            android:text="@string/new_user_button"
            android:textColor="#001021"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />



    </LinearLayout>


</LinearLayout>

